# time-clock-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  register.json  time_clock.db  vercel.json
alembic/: env.py
alembic/versions/: 6bae37eb93d9_initial_migration.py  cdb70b384356_initial_migration.py
api/: index.py  requirements.txt
app/: auth.py  main.py
app/config/: db_settings.py  lifespan.py  log_settings.py
app/constants/: constants.py
app/db/: database.py  init_models.py
app/dto/: error_dto.py
app/models/: dto.py
app/routes/: __init__.py  auth_controller.py  health_controller.py  schedule_controller.py  time_controller.py
app/services/: base_service.py  health_service.py
app/utils/: log_utils.py  utils.py
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js  i18n.js
frontend/src/components/: AdminDashboard.js  Login.js  UserDashboard.js
frontend/src/locales/: de.json  en.json  es.json  fr.json  it.json
test/: test_base_service.py  test_database.py  test_db_settings.py  test_docker.py  test_error_dto.py  test_health.py  test_health_service.py  test_log_utils.py
