[tool.poetry]
name = "time-clock-app"
version = "0.1.0"
description = "Professional time clock application with FastAPI backend and React frontend"
authors = ["Daniel Cortés Casadas <>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
alembic = "^1.16.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.10.1"
loguru = "^0.7.3"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"
testcontainers = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
python_files = [
    "test_*.py",
    "*_test.py"
]
python_functions = [
    "test_*"
]
testpaths = [
    "test",
]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "alembic",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]